# hetzner-radar

./: .cfignore  .gitignore  .prettierignore  .roomodes  CLAUDE.md  CNAME  README.md  eslint.config.js  flake.nix  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
.claude/: settings.local.json  svelte5-runes-cheatsheet.md
.cursorrules/: config.json
.github/: FUNDING.yml
20240709/: sb-191830.json
data/: cpu-specs.json  hetzner-cpus.json
migrations/: 0001_initial_schema.sql  0002_add_servers_table.sql  0002_add_vat_rate_to_alerts.sql  0003_add_ipv4_cost_flag_to_alerts.sql  0004_add_auctions_table.sql  0005_add_alert_auction_matches_table.sql  0006_change_alert_auction_matches_primary_key.sql  0007_add_discord_webhook_support.sql  0008_add_cloud_availability_alerts.sql  0009_add_critical_performance_indices.sql  0010_add_current_auctions_table.sql  0011_cleanup_historical_duplicates.sql  0012_add_cpu_enrichment_columns.sql  0013_add_cloud_alert_armed_state.sql  0014_add_generic_webhook_support.sql  0015_add_webhook_to_cloud_alerts.sql
scripts/: backfill_from_d1.py  dump.py  generate_cpu_specs.py  import.py  purge.py  push.py  pyproject.toml  update_incremental.py
specs/: configurations-rework.md  cpu-enrichment.md  per-cpu-landing-pages.md  seo-content-revamp.md
src/: app.css  app.d.ts  app.html  error.html  hooks.server.ts
static/: _headers  robots.txt
tests/: advanced-filtering.spec.ts  analyze.spec.ts  auth-flow.spec.ts  (+10 more)
(+267 files in other folders)
